Back to development: 2.0.94

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.94 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.93 (2017-06-26)
 +++++++++++++++++++
 
