--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.locales CHANGES
 2.0.94 (unreleased)
 +++++++++++++++++++
 
-- Nothing changed yet.
+- ZON-3174: Übersetzungen aktualisiert
 
 
 2.0.93 (2017-06-26)
