--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.96 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.95 (2017-07-07)
 +++++++++++++++++++
 
