Back to development: 2.0.97

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.97 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.96 (2017-07-10)
 +++++++++++++++++++
 
