Back to development: 2.0.98

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.98 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.97 (2017-08-07)
 +++++++++++++++++++
 
