--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.99 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.98 (2017-08-09)
 +++++++++++++++++++
 
