--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.0.100 (unreleased)
+++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.0.99 (2017-09-06)
 +++++++++++++++++++
 
