--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.1.1 (unreleased)
+++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.1.0 (2017-10-04)
 ++++++++++++++++++++
 
