--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.1.3 (unreleased)
+++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.1.2 (2018-03-21)
 ++++++++++++++++++
 
