--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.1.6 (unreleased)
+++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.1.5 (2018-04-03)
 ++++++++++++++++++
 
