--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.1.9 (unreleased)
+++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.1.8 (2018-05-07)
 ++++++++++++++++++
 
