--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.1.11 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.1.10 (2018-06-11)
 +++++++++++++++++++
 
