--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.1.13 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.1.12 (2018-07-11)
 +++++++++++++++++++
 
