--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.1.15 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.1.14 (2018-08-24)
 +++++++++++++++++++
 
