--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.1.17 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.1.16 (2018-10-17)
 +++++++++++++++++++
 
