Back to development: 2.1.18

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.1.18 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.1.17 (2018-11-15)
 +++++++++++++++++++
 
