Back to development: 2.1.19

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.1.19 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.1.18 (2018-11-20)
 +++++++++++++++++++
 
