--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.1.20 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.1.19 (2019-01-10)
 +++++++++++++++++++
 
