Back to development: 2.1.22

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.1.22 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.1.21 (2019-01-25)
 +++++++++++++++++++
 
