--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.1.23 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.1.22 (2019-01-28)
 +++++++++++++++++++
 
