--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.1.25 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.1.24 (2019-02-05)
 +++++++++++++++++++
 
