--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.1.29 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.1.28 (2019-02-26)
 +++++++++++++++++++
 
