--- a/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
+++ b/src/zeit/locales/de/LC_MESSAGES/zeit.cms.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Development/Unknown\n"
 "POT-Creation-Date: Tue Feb 26 12:55:01 2019\n"
-"PO-Revision-Date: 2019-02-26 12:56+0100\n"
+"PO-Revision-Date: 2019-02-27 15:43+0100\n"
 "Last-Translator: Wolfgang Schnerring <wolfgang.schnerring@zeit.de>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -23,7 +23,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: zope/app/locales/extract.py\n"
-"X-Generator: Poedit 2.0.6\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #: zeit/addcentral/sidebar.py:33 zeit/addcentral/sidebar.pt:10
 #: zeit/cms/browser/form.py:259 zeit/cms/application.zcml:48
@@ -3346,7 +3346,7 @@ msgstr "Das hochgeladene Bild konnte nicht identifiziert werden."
 
 #: zeit/content/image/browser/interfaces.py:15
 msgid "Unsupported image type"
-msgstr "Bild muss vom Typ JPG oder PNG sein"
+msgstr "Das Bild ist fehlerhaft oder das Format wird nicht unterstützt"
 
 #: zeit/content/image/browser/interfaces.py:40
 #: zeit/content/image/browser/interfaces.py:49
