Back to development: 2.1.30

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.locales CHANGES
 ====================
 
+2.1.30 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 2.1.29 (2019-04-10)
 +++++++++++++++++++
 
